--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.banner.location=firma.txt
 server.port=8090
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+debug = true
 
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
@@ -12,3 +13,15 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+security.oauth2.resource.filter-order=3
+security.signing-key = MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm= Spring Boot JWT
+
+security.jwt.client-id= libreriaappspring
+security.jwt.client-secret= libreUdec2021
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=libreriaId
