--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -4,6 +4,14 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 debug = true
 
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name= org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/LineaIII
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
 spring.jackson.serialization.fail-on-empty-beans=false
 
 security.oauth2.resource.filter-order=3
